# ghostpost

./: README.md  pyproject.toml
config/: settings.py  urls.py
ghostpost_app/: admin.py  forms.py  models.py  views.py
ghostpost_app/migrations/: 0001_initial.py  0002_auto_20210222_0050.py  0003_auto_20210222_0109.py  0004_post_is_roast.py
templates/: generic_form.html  home.html
